fixing up padding and heights of topics, media queries

--- a/views/start/interests.ejs
+++ b/views/start/interests.ejs
@@ -19,246 +19,51 @@
             <img src="https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3" />
           </div>
         </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
+        <div class="column one-quarter"> 
+          <div class="my-container">  
+            <h3>Fashion</h3>
+            <img src="https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3" />
           </div>
         </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
+        <div class="column one-quarter"> 
+          <div class="my-container">  
+            <h3>Fashion</h3>
+            <img src="https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3" />
           </div>
         </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
+        <div class="column one-quarter"> 
+          <div class="my-container">  
+            <h3>Fashion</h3>
+            <img src="https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3" />
           </div>
         </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-         <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-         <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-         <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-         <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-         <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-         <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-         <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-         <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          <div class="blackBackground">
-            <div class="topicImage opacityFilter" style="background-image: url(https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3);">
-            </div>
-          </div>
-        </div>
-        <div class="column one-quarter">
-          
-        </div>
-
       </div>
-
+      <div class="row">
+        <div class="column one-quarter"> 
+          <div class="my-container">  
+            <h3>Fashion</h3>
+            <img src="https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3" />
+          </div>
+        </div>
+        <div class="column one-quarter"> 
+          <div class="my-container">  
+            <h3>Fashion</h3>
+            <img src="https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3" />
+          </div>
+        </div>
+        <div class="column one-quarter"> 
+          <div class="my-container">  
+            <h3>Fashion</h3>
+            <img src="https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3" />
+          </div>
+        </div>
+        <div class="column one-quarter"> 
+          <div class="my-container">  
+            <h3>Fashion</h3>
+            <img src="https://images.unsplash.com/photo-1444401045234-4a2ab1f645c0?ixlib=rb-0.3.5&q=80&fm=jp&crop=entropy&s=4372cb6539c799269e343dd9456b7eb3" />
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
