--- a/public/stylesheets/start.css
+++ b/public/stylesheets/start.css
@@ -261,7 +261,7 @@ input.interestBox {
 
 }
 
-.margin-bottom-negsix {
+{
   margin-bottom: -6px !important;
 }
 
@@ -290,8 +290,9 @@ input.interestBox {
 
 .my-container {
     position: relative;
-    background: #171616;
+    background-color: #171616;
     overflow: hidden;
+    height: 150px;
 }
 .my-container h3 {
     padding: 50px;
@@ -308,6 +309,57 @@ input.interestBox {
     height: auto;
     z-index: 1;
     opacity: 0.6;
+}
+
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 950px) {
+
+  .my-container {
+    height: 120px;
+  }
+
+  .my-container h3 {
+    padding: 30px;
+  }
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+
+  .my-container {
+    height: 110px;
+  }
+
+  .my-container h3 {
+    padding: 20px;
+  }
+
+}
+
+@media only screen and (max-width : 675px) {
+
+  .my-container {
+    height: 90px;
+  }
+
+  .my-container h3 {
+    padding: 10px;
+  }
+
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (max-width : 480px) {
+
+  .my-container {
+    height: 70px;
+  }
+
+  .my-container h3 {
+    padding: 5px;
+  }
 }
 
 /* =========================================================================
