--- a/public/stylesheets/start.css
+++ b/public/stylesheets/start.css
@@ -89,6 +89,16 @@ div.profilePic {
   float: left;
 }
 
+.logo-size-edit {
+  height: auto; 
+  width: auto; 
+  max-width: 50px; 
+  max-height: 50px;
+  position:fixed; 
+  top:2.5%; 
+  left:2.5%;
+}
+
 
 /* =========================================================================
                             Location
@@ -149,6 +159,8 @@ input.box {
 /* =========================================================================
                             Interests
 =======================================================================*/
+
+
 
 .topicText {
   font-family: Avenir-Light;
@@ -373,6 +385,58 @@ input.interestBox {
     padding: 10px;
     font-size: 14px;
   }
+}
+
+.full-height-image {
+  height: 100% !important;
+  min-width: 100% !important;
+}
+
+.topic-progress-bar {
+    height: 60px;
+    position: fixed;
+    z-index: 10;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #5450DC;
+    color: #fff;
+    font-size: 16px;
+    line-height: 20px;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    transition-property: -webkit-transform,-webkit-transform;
+    transition-property: transform,transform;
+    transition-property: transform,transform,-webkit-transform,-webkit-transform;
+    transition-duration: 200ms;
+    transition-timing-function: ease-out;
+}
+
+.topic-picker-done-button {
+    font-size: 16px;
+    background-color: #fff;
+    color: #000;
+    padding: 0 30px;
+    height: 40px;
+    line-height: 40px;
+    border: none;
+    margin-left: 20px;
+}
+
+.topic-done-text {
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
 }
 
 /* =========================================================================
