keeping track of activities w/ Tony

--- a/views/start/interests.ejs
+++ b/views/start/interests.ejs
@@ -10,341 +10,7 @@
   <!-- The ReactDOM Library -->
   <script src="https://fb.me/react-dom-15.2.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-  <script type="text/babel">
-      var items = [
-   {
-      "id": 1,
-      "topicName": "Tech",
-      "imageURL":"../images/start/topics/tech.jpeg"
-   },
-   {
-      "id": 2,
-      "topicName": "Design",
-      "imageURL":"../images/start/topics/design.jpeg"
-   },
-   {
-      "id": 3,
-      "topicName": "Art",
-      "imageURL":"../images/start/topics/art.jpeg"
-   },
-   {
-      "id": 4,
-      "topicName": "Fashion",
-      "imageURL":"../images/start/topics/fashion.jpeg"
-   },
-   {
-      "id": 5,
-      "topicName": "Culture",
-      "imageURL":"../images/start/topics/culture.jpeg"
-   },
-   {
-      "id": 6,
-      "topicName": "Photography",
-      "imageURL":"../images/start/topics/photography.jpg"
-   },
-   {
-      "id": 7,
-      "topicName": "Movies",
-      "imageURL":"../images/start/topics/movies.jpeg"
-   },
-   {
-      "id": 8,
-      "topicName": "Sports",
-      "imageURL":"../images/start/topics/sports.jpeg"
-   },
-   {
-      "id": 9,
-      "topicName": "Entrepreneurship",
-      "imageURL":"../images/start/topics/tech.jpeg"
-   },
-   {
-      "id": 10,
-      "topicName": "Gaming",
-      "imageURL":"../images/start/topics/gaming.jpg"
-   },
-   {
-      "id": 11,
-      "topicName": "Startups",
-      "imageURL":"../images/start/topics/startups.jpeg"
-   },
-   {
-      "id": 12,
-      "topicName": "Politics",
-      "imageURL":"../images/start/topics/politics.jpg"
-   },
-   {
-      "id": 13,
-      "topicName": "Religion",
-      "imageURL":"../images/start/topics/religion.jpeg"
-   },
-   {
-      "id": 14,
-      "topicName": "Travel",
-      "imageURL":"../images/start/topics/travel.jpeg"
-   },
-   {
-      "id": 15,
-      "topicName": "Cooking",
-      "imageURL":"../images/start/topics/cooking.jpg"
-   },
-   {
-      "id": 16,
-      "topicName": "Anime",
-      "imageURL":"../images/start/topics/anime.jpeg"
-   },
-   {
-      "id": 17,
-      "topicName": "Philantrophy",
-      "imageURL":"../images/start/topics/philantrophy.jpeg"
-   },
-   {
-      "id": 18,
-      "topicName": "Environment",
-      "imageURL":"../images/start/topics/environment.jpeg"
-   },
-   {
-      "id": 20,
-      "topicName": "Vegan",
-      "imageURL":"../images/start/topics/vegan.jpg"
-   },
-   {
-      "id": 21,
-      "topicName": "Health",
-      "imageURL":"../images/start/topics/health.jpeg"
-   },
-   {
-      "id": 23,
-      "topicName": "Socializing",
-      "imageURL":"../images/start/topics/socializing.jpeg"
-   },
-   {
-      "id": 24,
-      "topicName": "Party",
-      "imageURL":"../images/start/topics/party.jpeg"
-   },
-   {
-      "id": 25,
-      "topicName": "Marketing",
-      "imageURL":"../images/start/topics/marketing.jpeg"
-   },
-   {
-      "id": 26,
-      "topicName": "Business",
-      "imageURL":"../images/start/topics/business.jpeg"
-   },
-   {
-      "id": 27,
-      "topicName": "Finance",
-      "imageURL":"../images/start/topics/finance.jpeg"
-   },
-   {
-      "id": 28,
-      "topicName": "Science",
-      "imageURL":"../images/start/topics/science.jpeg"
-   },
-   {
-      "id": 29,
-      "topicName": "Bowling",
-      "imageURL":"../images/start/topics/bowling.jpeg"
-   },
-   {
-      "id": 30,
-      "topicName": "Golf",
-      "imageURL":"../images/start/topics/golf.jpeg"
-   },
-   {
-      "id": 31,
-      "topicName": "Hockey",
-      "imageURL":"../images/start/topics/hockey.jpg"
-   },
-   {
-      "id": 32,
-      "topicName": "Yoga",
-      "imageURL":"../images/start/topics/yoga.jpeg"
-   },
-   {
-      "id": 33,
-      "topicName": "Boxing",
-      "imageURL":"../images/start/topics/boxing.jpg"
-   },
-   {
-      "id": 34,
-      "topicName": "Basketball",
-      "imageURL":"../images/start/topics/basketball.jpeg"
-   },
-   {
-      "id": 35,
-      "topicName": "Football",
-      "imageURL":"../images/start/topics/football.jpeg"
-   },
-   ,
-   {
-      "id": 36,
-      "topicName": "Tennis",
-      "imageURL":"../images/start/topics/tennis.jpg"
-   },
-   {
-      "id": 37,
-      "topicName": "Soccer",
-      "imageURL":"../images/start/topics/soccer.jpg"
-   },
-   {
-      "id": 38,
-      "topicName": "Weight Lifting",
-      "imageURL":"../images/start/topics/weight-lifting.jpeg"
-   },
-   {
-      "id": 39,
-      "topicName": "Dance",
-      "imageURL":"../images/start/topics/dance.jpeg"
-   },
-   {
-      "id": 40,
-      "topicName": "Exercise",
-      "imageURL":"../images/start/topics/exercise.jpeg"
-   },
-   {
-      "id": 41,
-      "topicName": "Music",
-      "imageURL":"../images/start/topics/music.jpg"
-   },
-   {
-      "id": 42,
-      "topicName": "Singing",
-      "imageURL":"../images/start/topics/singing.jpeg"
-   },
-   {
-      "id": 43,
-      "topicName": "Rapping",
-      "imageURL":"../images/start/topics/rapping.jpg"
-   },
-   {
-      "id": 44,
-      "topicName": "Hip-Hop",
-      "imageURL":"../images/start/topics/hip-hop.jpeg"
-   },
-   {
-      "id": 45,
-      "topicName": "Pop",
-      "imageURL":"../images/start/topics/pop.jpg"
-   },
-   {
-      "id": 46,
-      "topicName": "EDM",
-      "imageURL":"../images/start/topics/edm.jpg"
-   },
-   {
-      "id": 47,
-      "topicName": "Education",
-      "imageURL":"../images/start/topics/education.jpeg"
-   },
-   {
-      "id": 48,
-      "topicName": "Writing",
-      "imageURL":"../images/start/topics/writing.jpeg"
-   },
-   {
-      "id": 49,
-      "topicName": "Journalism",
-      "imageURL":"../images/start/topics/journalism.jpeg"
-   },
-   {
-      "id": 50,
-      "topicName": "Theatre",
-      "imageURL":"../images/start/topics/theatre.jpeg"
-   },
-   {
-      "id": 51,
-      "topicName": "Poetry",
-      "imageURL":"../images/start/topics/poetry.jpg"
-   },
-   {
-      "id": 52,
-      "topicName": "Comedy",
-      "imageURL":"../images/start/topics/comedy.jpg"
-   },
-   {
-      "id": 53,
-      "topicName": "Reading",
-      "imageURL":"../images/start/topics/reading.jpeg"
-   },
-   {
-      "id": 54,
-      "topicName": "Fiction",
-      "imageURL":"../images/start/topics/fiction.jpeg"
-   },
-   {
-      "id": 55,
-      "topicName": "Diversity",
-      "imageURL":"../images/start/topics/diversity.jpg"
-   },
-   {
-      "id": 56,
-      "topicName": "LGBT",
-      "imageURL":"../images/start/topics/lgbt.jpg"
-   },
-   {
-      "id": 58,
-      "topicName": "BlackLivesMatter",
-      "imageURL":"../images/start/topics/blacklivesmatter.jpg"
-   },
-   {
-      "id": 59,
-      "topicName": "Women In Tech",
-      "imageURL":"../images/start/topics/womenintech.jpg"
-   },
-   {
-      "id": 60,
-      "topicName": "Mental Health",
-      "imageURL":"../images/start/topics/mentalhealth.jpg"
-   }
-];
-
-    var RepeatModule = React.createClass({
-      getDefaultProps: function () {
-        return { items: [] }
-      },
-
-      getInitialState: function () {
-        return { items: [] }
-      },
-
-      componentDidMount: function () {
-        const items = this.props.items.map((item) => {
-          return Object.assign(item, { isActive: false });
-        });
-
-        this.setState({ items });
-      },
-
-      handleClick: function (e, index) {
-        const items = this.state.items
-          .map((item, i) => {
-            if (index === i) {
-              return Object.assign(item, { isActive: !item.isActive });
-            }
-            
-            return item;
-          });
-
-        this.setState({ items });
-      },
-      render: function() {
-        const items = this.state.items.map((item, index) => {
-          return <div className="column one-quarter" key={ index }>
-            <div
-              className={ `topicContainer ${ item.isActive ? 'purpleOverlay' : '' }` }
-              onClick={ (e) => this.handleClick(e, index) } data-value={item.topicName}>
-              <h3>{ item.topicName }</h3>, <img className="full-height-image" src={ item.imageURL } />
-            </div>
-          </div>
-        });
-        return <div>{ items }</div>
-      }
-    });
-    ReactDOM.render(<RepeatModule items={items} />,     
-     document.getElementById('topics'));
-  </script>
+  <script src ="/javascripts/activities.js" type="text/babel"></script>
   </head>
   <body>
   <img class="logo-size-edit" src="../images/logoPurple.png">
