--- a/views/start/interests.ejs
+++ b/views/start/interests.ejs
@@ -10,6 +10,8 @@
   <!-- The ReactDOM Library -->
   <script src="https://fb.me/react-dom-15.2.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script src="/javascripts/global.js" type="text/javascript"></script>
   <script src ="/javascripts/activities.js" type="text/babel"></script>
   </head>
   <body>
@@ -26,7 +28,7 @@
       </div>
     <div class="topic-progress-bar">
       <span class="topic-done-text">Great picks! Select more activities or hit Done to proceed</span>
-      <button class="topic-picker-done-button">Done</button>
+      <button type="button" onclick="doneActivities();" class="topic-picker-done-button">Done</button> 
     </div>
     </div>
   </div>
