made it responsive with flexbox without repeating class in react

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -43,7 +43,7 @@ a {
                             Responsive Helpers
 =======================================================================*/
 
-.container {
+.container-custom {
   display:-webkit-flex;
   -webkit-justify-content: center;
 }
