--- a/public/stylesheets/start.css
+++ b/public/stylesheets/start.css
@@ -23,7 +23,7 @@ a {
                             Responsive Helpers
 =======================================================================*/
 
-.container {
+.container-custom {
   display:-webkit-flex;
   justify-content: center;
 }
@@ -176,7 +176,7 @@ input.box {
 }
 
 .centerInterests {
-  width: 1000px;
+  max-width: 1000px;
   text-align: center;
 }
 
@@ -388,7 +388,8 @@ input.interestBox {
 }
 
 .full-height-image {
-  height: 100% !important;
+ /* height: 100% !important;*/
+  
   min-width: 100% !important;
 }
 
