--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
           <li><img class="resizeLogo" src="/images/logo.png">
             <p class="logoText">Frieyo</p></li>
         </ul>
-      	<div class="container">
+      	<div class="container-custom">
           <div class="center white-text">
             <img class="resizeRohit" src="/images/Rohit-Landing.png">
             <p class="useText">Rohit used Frieyo to find people to play music</p>
