--- a/views/start/contact.ejs
+++ b/views/start/contact.ejs
@@ -4,24 +4,28 @@
     <title>Frieyo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/start.css'/>
-    <link rel='stylesheet' href='/stylesheets/bootstrap.css'/>
   </head>
   <body>
     <div class="container">
-      <div class="inline-block row"> 
-        <div class="col-md-8">
+        <div class="row">
           <h1 class="interestStatement">How do you want to be reached?</h1>
+        </div>
+        <div class="row">
           <p>This is for people getting in touch to discuss common interests.</p>
+        </div>
+        <div class="row">
           <input class="contactBox" type="text" placeholder="http://www.twitter.com/">
+        </div>
+        <div class="row">
           <input class="contactBox" type="text" placeholder="http://www.linkedin.com/in/">
+        </div>
+        <div class="row">
           <input class="contactBox" type="text" placeholder="Email">
         </div>
-      </div>
-      <div class="inline-block row">
-        <div class="col-md-8">
-          <a onclick="contacttoAbout();"><button class="continue">Continue</button></a>
+        <div class="row">
+          <a onclick="contacttoFeed();"><button class="continue">Continue</button></a>
         </div>
-      </div>
+
     </div>
   <script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
