--- a/public/stylesheets/start.css
+++ b/public/stylesheets/start.css
@@ -19,6 +19,7 @@ a {
 }
 
 
+
 /* =========================================================================
                             Responsive Helpers
 =======================================================================*/
@@ -40,6 +41,12 @@ a {
 /* =========================================================================
                             Style
 =======================================================================*/
+
+button {
+  outline: none;
+  border: none;
+}
+
 
 .white-text {
 	color: white;
@@ -99,6 +106,14 @@ div.profilePic {
   left:2.5%;
 }
 
+@media screen and (max-width: 480px) {
+  .logo-size-edit {
+    position: absolute;
+  }
+
+}
+
+
 
 /* =========================================================================
                             Location
@@ -143,13 +158,11 @@ input.box {
 }
 
 .goButton {
-  /* Rectangle 7: */
   background: #5450DC;
   border-color: #5450DC;
   border-radius: 18px;
   height: 75px;
   width: 100px;
-  /* Go: */
   font-family: Avenir;
   font-size: 32px;
   color: #FFFFFF;
@@ -241,7 +254,7 @@ input.interestBox {
   display: inline-block;
   background: #5450DC;
   border-color: #5450DC;
-  border-radius: 6px;
+  border-radius: 10px;
   box-sizing: border-box;
   box-shadow: none;
   height: 50px;
@@ -253,8 +266,8 @@ input.interestBox {
 }
 
 .interestStatement {
-  font-size: 48px;
-  font-weight: 400;
+  font-size: 42px;
+  font-weight: 500;
   display: inline-block;
 }
 
@@ -389,7 +402,7 @@ input.interestBox {
 
 .full-height-image {
  /* height: 100% !important;*/
-  
+
   min-width: 100% !important;
 }
 
@@ -440,6 +453,18 @@ input.interestBox {
   flex: 0 0 auto;
 }
 
+.none {
+  display: none;
+}
+
+.not-none {
+  display: !none;
+}
+
+.show {
+  display: ;
+}
+
 /* =========================================================================
                             Contact
 =======================================================================*/
@@ -456,7 +481,29 @@ input.contactBox {
   background-color: #F5F8FA;
   display: block;
   margin-bottom: 30px;
+  padding-left: 12.5px;
 }
+
+
+img.socialIcons {
+  height: auto; 
+  width: auto; 
+  max-width: 50px; 
+  max-height: 50px;
+}
+
+p.descriptionText {
+  margin-bottom: 5%;
+}
+
+img.check {
+  height: auto; 
+  width: auto; 
+  max-width: 40px; 
+  max-height: 40px;
+  opacity: 1;
+}
+
 
 /* =========================================================================
                             About
