--- a/views/start/contact.ejs
+++ b/views/start/contact.ejs
@@ -4,28 +4,62 @@
     <title>Frieyo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/start.css'/>
+    <link rel='stylesheet' href='/stylesheets/flexbox.css'/>
   </head>
   <body>
-    <div class="container">
-        <div class="row">
-          <h1 class="interestStatement">How do you want to be reached?</h1>
+    <div class="start-container">
+      <img class="logo-size-edit" src="../images/logoPurple.png">
+      <div class="row">
+        <div class="column-no-padding _75">
+          <h2 class="interestStatement">Last step, how can you be reached?</h2>
         </div>
-        <div class="row">
-          <p>This is for people getting in touch to discuss common interests.</p>
+      <div class="column-no-padding _25">
+        <a onclick="contacttoFeed();"><button class="continue">All Done!</button></a>
+      </div>
+      </div>
+      <div class="row">
+          <p class="descriptionText">This is for people getting in touch to discuss common interests.</p>
+      </div>
+      <div class="row align-inherit">
+        <div class="column-7-half">
+          <img class="socialIcons" src="/images/start/instagram.png">
         </div>
-        <div class="row">
-          <input class="contactBox" type="text" placeholder="http://www.twitter.com/">
+        <div class="column-7-half">
+          <input class="contactBox" type="text" value="@">
         </div>
-        <div class="row">
-          <input class="contactBox" type="text" placeholder="http://www.linkedin.com/in/">
+      </div>
+      <div class="row align-inherit">
+        <div class="column-7-half">
+          <img class="socialIcons" src="/images/start/twitter.png">
         </div>
-        <div class="row">
-          <input class="contactBox" type="text" placeholder="Email">
+        <div class="column-7-half">
+          <input class="contactBox" type="text" value="@">
         </div>
-        <div class="row">
-          <a onclick="contacttoFeed();"><button class="continue">Continue</button></a>
+      </div>
+      <div class="row align-inherit">
+        <div class="column-7-half">
+          <img class="socialIcons" src="/images/start/linkedin.png">
         </div>
-
+        <div class="column-7-half">
+          <input class="contactBox" type="text" value="http://www.linkedin.com/in/">
+        </div>
+      </div>
+      <div class="row align-inherit">
+        <div class="column-7-half">
+          <img class="socialIcons" src="/images/start/email.png">
+        </div>
+        <div class="column-7-half">
+          <input class="contactBox" type="text" value="Email">
+        </div>
+      </div>
+      <div class="row align-inherit">
+        <div class="column-7-half">
+          <img class="socialIcons" src="/images/start/personal-website.png">
+        </div>
+        <div class="column-7-half">
+          <input class="contactBox" type="text" value="http://">
+        </div>
+      </div>
     </div>
   <script src="/javascripts/start.js" type="text/javascript"></script> 
   </body>
