show done bar when 3 or more activities are selected, hide when 2 or fewer

--- a/public/stylesheets/start.css
+++ b/public/stylesheets/start.css
@@ -461,9 +461,10 @@ input.interestBox {
   display: !none;
 }
 
-.show {
-  display: ;
+.up {
+  transform: translateY(-60px)
 }
+
 
 /* =========================================================================
                             Contact
