--- a/views/start/interests.ejs
+++ b/views/start/interests.ejs
@@ -24,7 +24,7 @@
 <!--       <p class="topicText">Popular Activities</p>
  -->      
       <div id="topics"></div>
-    <div class="topic-progress-bar">
+    <div class="topic-progress-bar" id="topic-progress-bar" style="transform: translateY(60px);">
       <span class="topic-done-text">Great picks! Select more activities or hit Done to proceed</span>
       <button type="button" onclick="doneActivities();" class="topic-picker-done-button">Done</button> 
     </div>
